--- a/portfolioUsingFlexbox/index.html
+++ b/portfolioUsingFlexbox/index.html
@@ -43,9 +43,9 @@
         <section id="section4">
             <h1>Contact Me</h1>
             <form action="">
-                <input type="text" placeholder="Your Name">
-                <input type="text" placeholder="Your Email">
-                <textarea name="" id="">Your Message</textarea>
+                <input type="text" placeholder=" Your Name">
+                <input type="text" placeholder=" Your Email">
+                <textarea name="" id="" placeholder=" Your Message"></textarea>
                 <button>Send</button>
             </form>
         </section>
